...
          routeName="index"
        />
      }
      onRefresh={handleRefresh}
      refreshing={isRefetching}
      scrollable
      testID="home-dashboard-screen"
    >
      {isForcedQueryError || (isError && !homeScreenState) ? (
        <QueryErrorState
          description={t('tabScreens.home.errors.description')}
          onRetry={handleRefresh}
          testID="home-dashboard-screen-error-state"
...
